# occupancy_tracker

./: .gitignore  ARCHITECTURE.md  README.md  config.yaml  pyproject.toml
.agent/workflows/: test.md
.github/: copilot-instructions.md
custom_components/occupancy_tracker/: __init__.py  area_manager.py  binary_sensor.py  button.py  const.py  coordinator.py  diagnostics.py  manifest.json  occupancy_tracker.py  sensor.py  sensor_manager.py
custom_components/occupancy_tracker/helpers/: anomaly_detector.py  area_state.py  constants.py  history_verifier.py  log_formatter.py  map_occupancy_resolver.py  map_state_recorder.py  sensor_adjacency_tracker.py  sensor_history_item.py  sensor_state.py  types.py  warning.py
custom_components/occupancy_tracker/sensors/: __init__.py  aggregate_sensors.py  anomaly_sensor.py  area_sensors.py  location_sensors.py
simulation/: layout.py  server.py  sim_coordinator.py
simulation/static/: index.html
simulation/static/css/: style.css
tests/integration/: README.md  __init__.py  conftest.py  test_anomalies.py  test_anomaly_integration.py  test_diagnostics_reset.py  test_end_to_end_scenarios.py  test_fixtures.py  test_masked_movement.py  test_multi_occupant_tracking.py  test_multi_sensor_coordination.py  test_production_replay.py  test_real_world_scenarios.py  test_scenarios.py
tests/occupancy_tracker/: conftest.py  test_button.py  test_coordinator.py  test_coordinator_core.py  test_coordinator_diagnostics.py  test_coordinator_warnings_reset.py  test_exit_capable.py  test_init.py  test_probability.py  test_sensor.py
(+34 files in other folders)
